--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "rc": "1.0.1",
     "sails": "~0.12.1",
     "sails-disk": "~0.10.9",
-    "sails-postgres": "~0.11.2",
+    "sails-postgresql": "~0.11.2",
     "sails-redis": "~0.10.7"
   },
   "scripts": {
