--- a/package.json
+++ b/package.json
@@ -1,15 +1,10 @@
 {
-  "name": "cjd-polymer",
-  "private": true,
-  "version": "0.0.0",
-  "description": "Using sails to test polymer",
-  "keywords": ["sails", "polymer"],
   "dependencies": {
     "bower": "~1.7.7",
     "connect-redis": "~3.0.2",
     "ejs": "2.3.4",
     "grunt": "0.4.5",
-    "grunt-bower-task": "^0.3.4",
+    "grunt-bower-task": "~0.3.4",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-coffee": "0.13.0",
     "grunt-contrib-concat": "0.5.1",
@@ -32,6 +27,14 @@
     "sails-postgresql": "~0.11.2",
     "sails-redis": "~0.10.7"
   },
+  "name": "cjd-polymer",
+  "private": true,
+  "version": "0.0.0",
+  "description": "Using sails to test polymer",
+  "keywords": [
+    "sails",
+    "polymer"
+  ],
   "scripts": {
     "debug": "node debug app.js",
     "start": "node app.js"
