[ADDING] post install script for bower install

--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   ],
   "scripts": {
     "debug": "node debug app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "postinstall": "bower install"
   },
   "main": "app.js",
   "repository": {
