--- a/bower.json
+++ b/bower.json
@@ -11,8 +11,8 @@
     "moment": "~2.11.2",
     "underscore": "~1.8.3",
     "backbone": "~1.2.3",
-    "material-design-lite": "~1.1.1",
-    "handlebars": "~4.0.5"
+    "handlebars": "~4.0.5",
+    "polymer": "^1.3.1"
   },
   "name": "cjd-polymer",
   "version": "0.0.0",
@@ -30,6 +30,12 @@
     },
     "handlebars": {
       "../js/dependencies/core": "handlebars.js"
+    },
+    "webcomponentsjs": {
+      "../js/dependencies/core": "webcomponents.js"
+    },
+    "polymer": {
+      "../templates/html": "*.html"
     }
   }
 }
