--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "backbone": "~1.2.3",
     "handlebars": "~4.0.5",
     "polymer": "Polymer/polymer#^1.3.1",
-    "paper-input": "PolymerElements/paper-input#^1.1.9"
+    "paper-input": "PolymerElements/paper-input#^1.1.9",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^1.1.3"
   },
   "name": "cjd-polymer",
   "version": "0.0.0",
@@ -37,6 +38,12 @@
     },
     "paper-styles": {
       "../vendor": "*.html"
+    },
+    "paper-behaviors": {
+      "../vendor": ["paper-button-behavior.html",
+                    "paper-checked-element-behavior.html",
+                    "paper-inky-focus-behavior.html",
+                    "paper-ripple-behavior.html"]
     }
   }
 }
