--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "handlebars": "~4.0.5",
     "polymer": "Polymer/polymer#^1.3.1",
     "paper-input": "PolymerElements/paper-input#^1.1.9",
-    "paper-checkbox": "PolymerElements/paper-checkbox#^1.1.3"
+    "paper-checkbox": "PolymerElements/paper-checkbox#^1.1.3",
+    "paper-card": "PolymerElements/paper-card#^1.1.1"
   },
   "name": "cjd-polymer",
   "version": "0.0.0",
@@ -40,10 +41,18 @@
       "../vendor": "*.html"
     },
     "paper-behaviors": {
-      "../vendor": ["paper-button-behavior.html",
-                    "paper-checked-element-behavior.html",
-                    "paper-inky-focus-behavior.html",
-                    "paper-ripple-behavior.html"]
+      "../vendor": [
+        "paper-button-behavior.html",
+        "paper-checked-element-behavior.html",
+        "paper-inky-focus-behavior.html",
+        "paper-ripple-behavior.html"
+      ]
+    },
+    "paper-material": {
+      "../vendor": [
+        "paper-material.html",
+        "paper-material-shared-styles.html"
+      ]
     }
   }
 }
