--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,10 @@
     "polymer": "Polymer/polymer#^1.3.1",
     "paper-input": "PolymerElements/paper-input#^1.1.9",
     "paper-checkbox": "PolymerElements/paper-checkbox#^1.1.3",
-    "paper-card": "PolymerElements/paper-card#^1.1.1"
+    "paper-card": "PolymerElements/paper-card#^1.1.1",
+    "paper-button": "PolymerElements/paper-button#^1.0.11",
+    "iron-icon": "PolymerElements/iron-icon#^1.0.8",
+    "iron-icons": "PolymerElements/iron-icons#^1.1.3"
   },
   "name": "cjd-polymer",
   "version": "0.0.0",
