--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "paper-card": "PolymerElements/paper-card#^1.1.1",
     "paper-button": "PolymerElements/paper-button#^1.0.11",
     "iron-icon": "PolymerElements/iron-icon#^1.0.8",
-    "iron-icons": "PolymerElements/iron-icons#^1.1.3"
+    "iron-icons": "PolymerElements/iron-icons#^1.1.3",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.7"
   },
   "name": "cjd-polymer",
   "version": "0.0.0",
