--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "paper-button": "PolymerElements/paper-button#^1.0.11",
     "iron-icon": "PolymerElements/iron-icon#^1.0.8",
     "iron-icons": "PolymerElements/iron-icons#^1.1.3",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.7"
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.7",
+    "paper-badge": "PolymerElements/paper-badge#^1.1.1"
   },
   "name": "cjd-polymer",
   "version": "0.0.0",
@@ -70,6 +71,12 @@
         "notification-icons.html",
         "places-icons.html",
         "social-icons.html"
+      ]
+    },
+    "iron-flex-layout": {
+      "../vendor": [
+        "iron-flex-layout.html",
+        "iron-flex-layout-classes.html"
       ]
     }
   }
