--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,10 @@
     "iron-icon": "PolymerElements/iron-icon#^1.0.8",
     "iron-icons": "PolymerElements/iron-icons#^1.1.3",
     "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.7",
-    "paper-badge": "PolymerElements/paper-badge#^1.1.1"
+    "paper-badge": "PolymerElements/paper-badge#^1.1.1",
+    "paper-header-panel": "PolymerElements/paper-header-panel#^1.1.4",
+    "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.4",
+    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.15"
   },
   "name": "cjd-polymer",
   "version": "0.0.0",
