--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "paper-badge": "PolymerElements/paper-badge#^1.1.1",
     "paper-header-panel": "PolymerElements/paper-header-panel#^1.1.4",
     "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.4",
-    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.15"
+    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.15",
+    "paper-fab": "PolymerElements/paper-fab#^1.2.0"
   },
   "name": "cjd-polymer",
   "version": "0.0.0",
