--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.4",
     "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.15",
     "paper-fab": "PolymerElements/paper-fab#^1.2.0",
-    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.8"
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.8",
+    "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.2"
   },
   "name": "cjd-polymer",
   "version": "0.0.0",
