--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,8 @@
     "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.15",
     "paper-fab": "PolymerElements/paper-fab#^1.2.0",
     "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.8",
-    "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.2"
+    "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.2",
+    "paper-radio-button": "PolymerElements/paper-radio-button#^1.1.1"
   },
   "name": "cjd-polymer",
   "version": "0.0.0",
