--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.8",
     "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.2",
     "paper-radio-button": "PolymerElements/paper-radio-button#^1.1.1",
-    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.1.2"
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.1.2",
+    "paper-item": "PolymerElements/paper-item#^1.1.4"
   },
   "name": "cjd-polymer",
   "version": "0.0.0",
