--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "paper-radio-button": "PolymerElements/paper-radio-button#^1.1.1",
     "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.1.2",
     "paper-item": "PolymerElements/paper-item#^1.1.4",
-    "paper-menu": "PolymerElements/paper-menu#^1.2.2"
+    "paper-menu": "PolymerElements/paper-menu#^1.2.2",
+    "paper-toast": "PolymerElements/paper-toast#^1.2.1"
   },
   "name": "cjd-polymer",
   "version": "0.0.0",
