--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,8 @@
     "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.1.2",
     "paper-item": "PolymerElements/paper-item#^1.1.4",
     "paper-menu": "PolymerElements/paper-menu#^1.2.2",
-    "paper-toast": "PolymerElements/paper-toast#^1.2.1"
+    "paper-toast": "PolymerElements/paper-toast#^1.2.1",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.1.3"
   },
   "name": "cjd-polymer",
   "version": "0.0.0",
