--- a/bower.json
+++ b/bower.json
@@ -33,7 +33,8 @@
     "paper-menu": "PolymerElements/paper-menu#^1.2.2",
     "paper-toast": "PolymerElements/paper-toast#^1.2.1",
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.1.3",
-    "paper-listbox": "PolymerElements/paper-listbox#^1.1.2"
+    "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
+    "paper-slider": "PolymerElements/paper-slider#^1.0.10"
   },
   "name": "cjd-polymer",
   "version": "0.0.0",
