--- a/bower.json
+++ b/bower.json
@@ -12,29 +12,29 @@
     "underscore": "~1.8.3",
     "backbone": "~1.2.3",
     "handlebars": "~4.0.5",
-    "polymer": "Polymer/polymer#^1.3.1",
-    "paper-input": "PolymerElements/paper-input#^1.1.9",
-    "paper-checkbox": "PolymerElements/paper-checkbox#^1.1.3",
-    "paper-card": "PolymerElements/paper-card#^1.1.1",
-    "paper-button": "PolymerElements/paper-button#^1.0.11",
-    "iron-icon": "PolymerElements/iron-icon#^1.0.8",
-    "iron-icons": "PolymerElements/iron-icons#^1.1.3",
-    "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.7",
-    "paper-badge": "PolymerElements/paper-badge#^1.1.1",
-    "paper-header-panel": "PolymerElements/paper-header-panel#^1.1.4",
-    "paper-toolbar": "PolymerElements/paper-toolbar#^1.1.4",
-    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.15",
-    "paper-fab": "PolymerElements/paper-fab#^1.2.0",
-    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.8",
-    "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.2",
-    "paper-radio-button": "PolymerElements/paper-radio-button#^1.1.1",
-    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.1.2",
-    "paper-item": "PolymerElements/paper-item#^1.1.4",
-    "paper-menu": "PolymerElements/paper-menu#^1.2.2",
-    "paper-toast": "PolymerElements/paper-toast#^1.2.1",
-    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.1.3",
-    "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
-    "paper-slider": "PolymerElements/paper-slider#^1.0.10"
+    "polymer": "Polymer/polymer#~1.3.1",
+    "paper-input": "PolymerElements/paper-input#~1.1.9",
+    "paper-checkbox": "PolymerElements/paper-checkbox#~1.1.3",
+    "paper-card": "PolymerElements/paper-card#~1.1.1",
+    "paper-button": "PolymerElements/paper-button#~1.0.11",
+    "iron-icon": "PolymerElements/iron-icon#~1.0.8",
+    "iron-icons": "PolymerElements/iron-icons#~1.1.3",
+    "paper-icon-button": "PolymerElements/paper-icon-button#~1.0.7",
+    "paper-badge": "PolymerElements/paper-badge#~1.1.1",
+    "paper-header-panel": "PolymerElements/paper-header-panel#~1.1.4",
+    "paper-toolbar": "PolymerElements/paper-toolbar#~1.1.4",
+    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#~1.0.15",
+    "paper-fab": "PolymerElements/paper-fab#~1.2.0",
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.8",
+    "paper-tooltip": "PolymerElements/paper-tooltip#~1.1.2",
+    "paper-radio-button": "PolymerElements/paper-radio-button#~1.1.1",
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#~1.1.2",
+    "paper-item": "PolymerElements/paper-item#~1.1.4",
+    "paper-menu": "PolymerElements/paper-menu#~1.2.2",
+    "paper-toast": "PolymerElements/paper-toast#~1.2.1",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.1.3",
+    "paper-listbox": "PolymerElements/paper-listbox#~1.1.2",
+    "paper-slider": "PolymerElements/paper-slider#~1.0.10"
   },
   "name": "cjd-polymer",
   "version": "0.0.0",
