--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,7 @@
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.1.3",
     "paper-listbox": "PolymerElements/paper-listbox#~1.1.2",
     "paper-slider": "PolymerElements/paper-slider#~1.0.10",
-    "paper-spinner": "PolymerElements/paper-spinner#^1.1.1"
+    "paper-spinner": "PolymerElements/paper-spinner#~1.1.1"
   },
   "name": "cjd-polymer",
   "version": "0.0.0",
